Added CoffeeScript, tweaked SASS and templates

--- a/sass/bobcat5.scss
+++ b/sass/bobcat5.scss
@@ -1,7 +1,10 @@
-
+/*
+ *=require_tree ./partials
+ */
 // Import base variables and mixins which bobcat and sub layouts use
 @import "partials/base";
 @import "partials/header";
+@import "partials/sidebar";
 @import "partials/content";
 @import "partials/search";
 @import "partials/forms";
