--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -25,8 +25,9 @@ $blueprint-liquid-container-min-width: 950px;
 //Borders
 $thin_border: 1px solid #ccc;
 $form_els_border: 1px solid #B4B4B5;
-$results_list_border: 2px solid #d9d9d9;
-$tab_border: 1px solid #fff;
+$content_list_border: 2px solid #d9d9d9;
+$tab_border: 1px solid white;
+$light_border: 1px solid white;
 
 //Colors (gray theme)
 $link_color: #0000cc;
@@ -39,6 +40,7 @@ $box_bg_color: #dcddde;
 $header_bg_color: #ccc;
 $footer_text_color: #666;
 $active_tab_color: #eeeeef;
+$required_field: #C00;
 
 //Background images
 $header_bg_image: "https://library.nyu.edu/images/common/header_bg_dark.gif";
@@ -77,51 +79,12 @@ $header_fonts: Arial, Verdana, Genevea, Helvetica, sans-serif;
 @mixin no-style-list {
 	list-style: none;
 	background-image: none;
+	padding-left: 1em;
 }
 
 @mixin no-style-list-item {
 	list-style: none;
 	background-image: none;
-}
-
-@mixin sidebar {
-	font-family: $text_fonts;
-	.box {
-		background: $box_bg_color url($box_bg_image) repeat-x top left;
-		h2 {
-			background: $header_bg_color url($header_bg_image) repeat-x top left;
-			padding: 0.3em 1.5em;
-			font-size: 110%;
-			font-weight: normal;
-		}
-		h3 { 
-			font-size: 110%;	
-			font-weight: bold;
-		}
-		input[type="text"], #js_search_tags input[type="text"] {
-			background-image: url($magnifier_image);
-			background-position: 6px 50%;
-			background-repeat: no-repeat;
-			width: 80%;
-			border: $thin_border;
-			padding: 5px 0 5px 24px;
-		}
-		#shelf_options li #records {
-			font-weight: bold;
-		}
-		ul { @include no-style-list; }
-		> ul {
-			padding-bottom:1.5em;
-			&.tags_list {
-				margin: 0 auto;
-				padding: 0 auto;
-				li {
-					padding: 5px 0 0;
-					margin-right: 0;
-				}
-			}
-		}
-	} 
 }
 
 /*Alias Classes*/
