--- a/views/form.html.mustache
+++ b/views/form.html.mustache
@@ -1,5 +1,5 @@
 {{#form}}
-<form action="<#DLL>" method="post" name="{{form_name}}" class="f-wrap-request">
+<form action="<#DLL>" method="post" name="{{form_name}}" id="{{form_id}}">
             {{#hidden_fields}}
             <input type="hidden" name="{{name}}" value="{{{value}}}" />
             {{/hidden_fields}}
