--- a/sass/lib/partials/_search.scss
+++ b/sass/lib/partials/_search.scss
@@ -1,12 +1,5 @@
-@mixin form_els {
-	font-family: $text_fonts;
-	font-size: 1em;
-	color: black;
-	display: inline;
-	border: $form_els_border;
-}
 .search_container {
-	padding-bottom: 1em;
+	padding-bottom: $padding_small;
 	background: $box_bg_color url($box_bg_image) repeat-x 0 31px;
 }
 /* Search */
@@ -18,8 +11,8 @@
 	}
 	fieldset {
 		border: none;
-		padding: 0px;
-		margin-bottom: 1.5em;
+		padding: 0;
+		margin-bottom: $padding_standard;
 	}
 	textarea {
 		@include form_els;
@@ -35,7 +28,7 @@
 		vertical-align: middle;
 		padding-left: 24px;
 		width: 80%;
-		max-width: 30em;
+		max-width: $tab_width;
 	}
  	select {
 		display: inline;
@@ -43,9 +36,9 @@
 	ul li {
 		@include no-margin;
 		@include no-padding;
+		@include float-left;
 		background-image: none; 
 		line-height: auto;
-		float: left;
-		margin-right: .25em
+		margin-right: $padding_small * .25;
 	}
 }
