--- a/sass/lib/partials/_availability.scss
+++ b/sass/lib/partials/_availability.scss
@@ -1,3 +1,6 @@
+/*
+  Availability color styles
+*/
 body.two-col.bp.bobcat {
 	/* Availability */
 	.getItPurple, .getItGreen, .greenAvailable, .purpleAvailable {
