--- a/sass/lib/partials/_expand_contract.scss
+++ b/sass/lib/partials/_expand_contract.scss
@@ -1,3 +1,7 @@
+/*
+  Styles for collapsible sidebar made by expand_contract.js library
+*/
+
 $bullet_right: "https://library.nyu.edu/images/bullet_collapse_right.png";
 $bullet_left: "https://library.nyu.edu/images/bullet_collapse_left.png";
 $background_color: #ccc;
