--- a/sass/lib/partials/_forms.scss
+++ b/sass/lib/partials/_forms.scss
@@ -1,4 +1,6 @@
-/* Forms */
+/* 
+  Form styles specific for bobcat - most defaults from Blueprint are good enough
+*/
 form {
 	input[type="text"], input[type="password"], textarea {
 		max-width: 26em;
