--- a/sass/lib/partials/_full_details.scss
+++ b/sass/lib/partials/_full_details.scss
@@ -1,4 +1,6 @@
-/* Full Details */
+/* 
+  Styles for full details pages
+*/
 #full_details {
 	border: $border_content_list;
 	padding: $padding_tiny ($padding_small * 1.25);
