--- a/sass/lib/partials/_header.scss
+++ b/sass/lib/partials/_header.scss
@@ -1,3 +1,6 @@
+/*
+  Styles for elements in the header of bobcat pages
+*/
 header {
 	background-color: white;
 	margin-bottom: $padding_standard;
