Link logo back to home

--- a/views/include_header.html.mustache
+++ b/views/include_header.html.mustache
@@ -1,4 +1,5 @@
 <header>
+  <a href="http://library.nyu.edu/" id="hd_link_to_home"></a>
   <h1><span>{{application_name}}</span></h1>
   <nav>
     <ul class="breadcrumbs">
