--- a/sass/illiad.scss
+++ b/sass/illiad.scss
@@ -2,95 +2,95 @@
 @import "lib/eshelf";
 
 // Styles specific to ILLiad sub styles of eshelf and bobcat
-body.two-col.bp.bobcat.eshelf.illiad {
-  
-  .content {
-    .actions { display: none; }
-    table {
-      thead {
-        tr.row-header th {
-    	    font-size: $base_font_size * 2;
-    	    background: transparent;
-    	    margin: 0 0 $padding_tiny 0;
-    	    font-weight: lighter;
-    	  }
-      	tr.row-headings th {
-        	border-right: $border_light;
-        	border-bottom: $border_light;
-      		background: $breadcrumb_bg;
-      	}
+
+.content {
+  .actions { display: none; }
+  table {
+    thead {
+      tr.row-header th {
+  	    font-size: $base_font_size * 2;
+  	    background: transparent;
+  	    margin: 0 0 $padding_tiny 0;
+  	    font-weight: lighter;
+  	  }
+    	tr.row-headings th {
+      	border-right: $border_light;
+      	border-bottom: $border_light;
+    		background: $breadcrumb_bg;
     	}
-    	tbody {
-    	  td {
-    	    border-right: $border_light;
-    	  }
-    	}
-    }
-    form {
-      fieldset {
-        margin-left: 0;
-        padding-left: 0;
-        border: 0;
-        .field { 
-          @include clearfix; 
-          border-top: $border_content_list;
-          padding: $padding_tiny 0 0 0;
-          margin: 0 0 $padding_tiny 0;
-          textarea {
-            height: 18px;
-            max-width: 300px;
-            &#Other { height: 10em; }
-          }
-          textarea, input[type=text], select {
-            display: block;
-            @include float-right;
-            @include clearfix;
-          }
-          label {
-            display: block;
-            width: 50%;
-            @include float-left;
-            @include clearfix;
-          }
-          span.note {
-            font-size: $base_font_size * .8;
-            font-weight: normal;
-            color: tint(black, 10%);//#333;
-          }
+  	}
+  	tbody {
+  	  td {
+  	    border-right: $border_light;
+  	  }
+  	}
+  }
+  form {
+    fieldset {
+      margin-left: 0;
+      padding-left: 0;
+      border: 0;
+      .field { 
+        @include clearfix; 
+        border-top: $border_content_list;
+        padding: $padding_tiny 0 0 0;
+        margin: 0 0 $padding_tiny 0;
+        textarea {
+          height: 18px;
+          max-width: 300px;
+          &#Other { height: 10em; }
         }
-        .request_buttons {
-      	  text-align: right;
-      	  @include clearfix; 
+        textarea, input[type=text], select {
+          display: block;
+          @include float-right;
+          @include clearfix;
+        }
+        label {
+          display: block;
+          width: 50%;
+          @include float-left;
+          @include clearfix;
+        }
+        span.note {
+          font-size: $base_font_size * .8;
+          font-weight: normal;
+          color: tint(black, 10%);//#333;
         }
       }
-    }
-    .status_container {
-      @include wrap-text;
-      margin: $padding_small 0;
-      p {
-        padding: ($padding_small * .3) 0;
-        margin: 0;
+      .request_buttons {
+    	  text-align: right;
+    	  @include clearfix; 
       }
-      .statusError { color: red; }
-      .statusNormal { color: black; }
-      .statusInformation { color: black; }
-    }
-    .validationError { color: red; }
-    #transactionMenu { 
-      border-top: $border_thin;
-      border-bottom: $border_thin;
-      font-weight: bold;
-      padding: $padding_tiny 0;
     }
   }
-  .sidebar {
-    #search_illiad {
-      ul {
-        padding-left: 0;
-      }
+  .status_container {
+    @include wrap-text;
+    margin: $padding_small 0;
+    p {
+      padding: ($padding_small * .3) 0;
+      margin: 0;
     }
-  }  
+    .statusError { color: red; }
+    .statusNormal { color: black; }
+    .statusInformation { color: black; }
+  }
+  .validationError { color: red; }
+  #transactionMenu { 
+    border-top: $border_thin;
+    border-bottom: $border_thin;
+    font-weight: bold;
+    padding: $padding_tiny 0;
+  }
+}
+.sidebar {
+  #search_illiad {
+    ul {
+      padding-left: 0;
+    }
+  }
+}  
 
+body {
   &#LoanRequest, &#EditLoanRequest { section.sidebar a#request_book { @include selected; } }
   &#ArticleRequest, &#EditArticleRequest { section.sidebar a#request_article { @include selected; } }
   &#BookChapterRequest, &#EditBookChapterRequest { section.sidebar a#request_book_chapter { @include selected; } }
@@ -104,5 +104,5 @@ body.two-col.bp.bobcat.eshelf.illiad {
   &.view_requests { section.sidebar a#view_all { @include selected; } }
   &#ElectronicDelivery { section.sidebar a#view_electronic { @include selected; } }
   &#ViewNotifications { section.sidebar a#view_notifications { @include selected; } }
-
 }
+
