--- a/sass/illiad.scss
+++ b/sass/illiad.scss
@@ -88,7 +88,9 @@
       padding-left: 0;
     }
   }
-}  
+}
+
+.linkout { font-weight: bold; }
 
 body {
   &#LoanRequest, &#EditLoanRequest { section.sidebar a#request_book { @include selected; } }
